--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ h3 { font-family: 'Fredericka the Great';margin-top: 0px;text-align: center; fon
   height: 100px;
   width: 100px;
 }
+.radio img {
+  height: 100px;
+  width: 100px;
+}
 hr {
     display: block;
     height: 1px;
